# frei0r

./: CMakeLists.txt
include/: frei0r_math.h
src/: CMakeLists.txt  infinity.c
src/filter/alpha0ps/: CMakeLists.txt  alpha0ps.c
src/filter/blur/: CMakeLists.txt  IIRblur.c
src/filter/c0rners/: interp.h
src/filter/colgate/: CMakeLists.txt
src/filter/coloradj/: CMakeLists.txt
src/filter/colordistance/: colordistance.c
src/filter/curves/: CMakeLists.txt  curves.c
src/filter/d90stairsteppingfix/: d90stairsteppingfix.cpp
src/filter/defish0r/: CMakeLists.txt
src/filter/denoise/: CMakeLists.txt
src/filter/dither/: dither.c
src/filter/gamma/: CMakeLists.txt
src/filter/hueshift0r/: CMakeLists.txt
src/filter/levels/: CMakeLists.txt
src/filter/lightgraffiti/: lightgraffiti.cpp
src/filter/measure/: CMakeLists.txt  measure.h  pr0be.c
src/filter/perspective/: perspective.c
src/filter/rgbnoise/: CMakeLists.txt
src/filter/three_point_balance/: CMakeLists.txt
src/filter/timeout/: timeout.cpp
src/generator/partik0l/: partik0l.cpp
src/generator/test_pat/: CMakeLists.txt
src/mixer2/uvmap/: uvmap.c
